<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/hospital_logOut"
        android:orderInCategory="100"
        android:title="@string/menuHosp_logOut"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/hospital_editProfile"
        android:orderInCategory="100"
        android:title="@string/menuHosp_editProfile"
        app:showAsAction="never"/>

    <item
        android:id="@+id/hospital_changeEmail"
        android:orderInCategory="100"
        android:title="@string/menuHosp_changeEmail"
        app:showAsAction="never"/>

    <item
        android:id="@+id/hospital_changePassword"
        android:orderInCategory="100"
        android:title="@string/menuHosp_changePassword"
        app:showAsAction="never"/>
</menu>


