<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrandier"
    tools:context=".CheckUniqueCode"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCheckCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tv_checkUniqueCode"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCheckHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tv_hospitalUniqueCode"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvCheckDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:text="@string/tv_doctorUniqueCode"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/checkUniqueCodeWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCheckUniqueCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/et_checkUniqueCode"
                android:inputType="textPersonName|textCapWords"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCheckCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_fading"
            android:text="@string/btn_checkUniqueCode"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>