<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrandier"
    android:orientation="vertical"
    tools:context=".LoginBy">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLoginBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tv_loginByPage"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#f2f2f2"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbPersonalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cb_loginByPersonalDetails"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnPersonalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_fading"
                android:text="@string/btn_loginByPersonalDetails"
                android:textColor="#ffffff"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#f2f2f2"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbFingerPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cb_loginByFingerPrint"
                android:textSize="22sp" />

            <Button
                android:id="@+id/btnFingerPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/btn_fading"
                android:text="@string/btn_loginByFingerPrint"
                android:textColor="#ffffff"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>