<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrandier"
    android:orientation="vertical"
    tools:context=".PatientListDoctor">

    <TextView
        android:id="@+id/tvPatListHospName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/tv_patListHospitalName"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvPatListDoctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/tv_patListDoctorName"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/patDocRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNewPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_fading"
            android:text="@string/btn_patListAddPatient"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnBackDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_fading"
            android:text="@string/btn_patListBackDoctor"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>