<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrandier"
    tools:context=".PatientRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPatHospNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tv_patRegHospitalName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvPatDocNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tv_patRegDoctorName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatCardCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegCardCode"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatUniqueCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegUniqueCode"
                android:inputType="text|textCapWords"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegFirstName"
                android:inputType="textPersonName|textCapWords"
                android:paddingStart="10dp"
                android:textColorHint="#000000"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegLastName"
                android:inputType="textPersonName|textCapWords"
                android:paddingStart="10dp"
                android:textColorHint="#000000"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatEmailReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatPassReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegPassword"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#000000"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPatConfPassReg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/tv_patRegConfPassword"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAddPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/btn_fading_left"
            android:text="@string/btn_patRegister"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBackDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_fading_right"
            android:text="@string/btn_patLogIn"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>